# CrimeForecastingCO

./: pyproject.toml
data/raw/: agg_assault_murder_age1525_all.csv  aggassault_murder_property_mvt_age2534_3544.csv  firearm_agg_assault_murder_age1525_all.csv  firearm_agg_assault_murder_age2534_3544.csv  mvt_property_crime_age1525_all.csv  total_crime_age2534_3544.csv  total_pop_total_crimes_age1525_all.csv
