[project]
name = "crime-forecasting-co"
version = "0.1.0"
description = "Monthly city-level crime forecasting for Colorado"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "pandas",
    "numpy",
    "statsmodels",
    "matplotlib",
    "plotly",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "jupyter",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]